<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calc.CalculatorFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/Theme.AppCompat.Light" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@id/middle_view"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/amount_editor"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/quicksand_regular"
                android:gravity="center|end"
                android:importantForAutofill="no"
                android:lines="1"
                android:text="@string/_0"
                android:textAlignment="gravity"
                android:textColor="@color/colorWhite"
                android:textSize="100sp"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="18sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="LabelFor" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/middle_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@id/middle_view"
            android:layout_alignParentBottom="true">

            <TableLayout
                android:id="@+id/layout_numpad"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:orientation="vertical"
                android:padding="8dp"
                android:stretchColumns="0,1,2"
                android:weightSum="4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/layout_operators"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/num_7"
                        style="@style/Button.Numpad.Num"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/_7" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/num_8"
                        style="@style/Button.Numpad.Num"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/_8" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/num_9"
                        style="@style/Button.Numpad.Num"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/_9" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/num_4"
                        style="@style/Button.Numpad.Num"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/_4" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/num_5"
                        style="@style/Button.Numpad.Num"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/_5" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/num_6"
                        style="@style/Button.Numpad.Num"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/_6" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/num_1"
                        style="@style/Button.Numpad.Num"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/_1" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/num_2"
                        style="@style/Button.Numpad.Num"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/_2" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/num_3"
                        style="@style/Button.Numpad.Num"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/_3" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/num_0"
                        style="@style/Button.Numpad.Num"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/_0" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/num_comma"
                        style="@style/Button.Numpad.Num"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/comma" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/num_backspace"
                        style="@style/Button.Numpad.Num"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/backspace" />

                </TableRow>

            </TableLayout>

            <LinearLayout
                android:id="@+id/layout_operators"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@color/colorPlainBackground"
                android:orientation="vertical"
                android:padding="8dp"
                android:weightSum="5"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/op_div"
                    style="@style/Button.Operator"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/div" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/op_mult"
                    style="@style/Button.Operator"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/mult" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/op_minus"
                    style="@style/Button.Operator"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/minus" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/op_plus"
                    style="@style/Button.Operator"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/plus" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/op_equal"
                    style="@style/Button.Operator"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/equal" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>